--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.3",
+    "@mui/lab": "^5.0.0-alpha.85",
     "@mui/material": "^5.8.3",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
@@ -29,6 +30,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.1.10",
     "redux": "^4.2.0",
     "rxjs": "^7.5.5",
     "typescript": "^4.7.3",
