--- a/package.json
+++ b/package.json
@@ -19,18 +19,19 @@
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
+    "babel-plugin-react-remove-properties": "^0.3.0",
     "i18next": "^21.8.9",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-http-backend": "^1.4.1",
     "rc-table": "^7.24.2",
     "react": "^18.1.0",
     "react-app-rewired": "^2.2.1",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.1.0",
     "react-i18next": "^11.17.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "recharts": "^2.1.10",
     "redux": "^4.2.0",
     "rxjs": "^7.5.5",
     "typescript": "^4.7.3",
@@ -41,7 +42,8 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
-    "lint": "eslint --ext .ts --ext .tsx src"
+    "lint": "eslint --ext .ts --ext .tsx src",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -60,5 +62,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cypress": "^10.1.0"
   }
 }
